--- a/002_calculate_metrics_based_on_graphs.ipynb
+++ b/002_calculate_metrics_based_on_graphs.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "executionInfo": {
      "elapsed": 14,
@@ -33,6 +33,7 @@
     "import os\n",
     "import time\n",
     "import json\n",
+    "from typing import Literal\n",
     "\n",
     "import numpy as np\n",
     "\n",
@@ -46,6 +47,7 @@
     "\n",
     "root: str = \"./quijote\"\n",
     "graphs_root: str = f\"{root}/grafos\"\n",
+    "metrics_path: str = f'{graphs_root}/metrics2.json'\n",
     "\n",
     "assert os.path.exists(graphs_root)"
    ]
@@ -61,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "executionInfo": {
      "elapsed": 73,
@@ -199,6 +201,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def save_metrics(\n",
+    "    metrics: dict,\n",
+    "    graph_path: str,\n",
+    "    laplacian_path: str,\n",
+    "    cont: int\n",
+    ") -> None:\n",
+    "    # Calcular las métricas del grafo\n",
+    "    g = ig.Graph.Read_GraphML(graph_path)\n",
+    "    print(f'{cont}. {graph_path} -- Vertices {len(g.vs):,} -- Aristas {len(g.es):,}')\n",
+    "\n",
+    "    t0 = time.perf_counter()\n",
+    "    calculate_metrics(g, metrics, laplacian_path)\n",
+    "    tf = time.perf_counter() - t0\n",
+    "\n",
+    "    print(f'Tiempo: {tf} segundos\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "colab": {
@@ -217,22 +242,119 @@
     "id": "d_c6dy-L0KIr",
     "outputId": "d07c8687-d475-4b3e-a5f4-47a213ba997e"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fiducial_LR\n",
+      "1. ./quijote/grafos/fiducial_LR/100/fiducial_LR_001.graphml.xml -- Vertices 112 -- Aristas 702\n",
+      "Calcular 'global_efficiency'\n",
+      "Calcular 'local_efficiencies'\n",
+      "Calcular 'entropy\n",
+      "Calcular 'fractal_dimension'\n",
+      "Calcular 'hurst'\n",
+      "Calcular 'closeness'\n",
+      "Calcular 'betweenness'\n",
+      "Calcular 'eigenvector'\n",
+      "Calcular 'convergence'\n",
+      "Tiempo: 0.23636382699999103 segundos\n",
+      "\n",
+      "2. ./quijote/grafos/fiducial_LR/102/fiducial_LR_001.graphml.xml -- Vertices 103 -- Aristas 653\n",
+      "Calcular 'global_efficiency'\n",
+      "Calcular 'local_efficiencies'\n",
+      "Calcular 'entropy\n",
+      "Calcular 'fractal_dimension'\n",
+      "Calcular 'hurst'\n",
+      "Calcular 'closeness'\n",
+      "Calcular 'betweenness'\n",
+      "Calcular 'eigenvector'\n",
+      "Calcular 'convergence'\n",
+      "Tiempo: 0.02226344300004257 segundos\n",
+      "\n",
+      "3. ./quijote/grafos/fiducial_LR/0/fiducial_LR_001.graphml.xml -- Vertices 96 -- Aristas 585\n",
+      "Calcular 'global_efficiency'\n",
+      "Calcular 'local_efficiencies'\n",
+      "Calcular 'entropy\n",
+      "Calcular 'fractal_dimension'\n",
+      "Calcular 'hurst'\n",
+      "Calcular 'closeness'\n",
+      "Calcular 'betweenness'\n",
+      "Calcular 'eigenvector'\n",
+      "Calcular 'convergence'\n",
+      "Tiempo: 0.027012561000049118 segundos\n",
+      "\n",
+      "4. ./quijote/grafos/fiducial_LR/101/fiducial_LR_001.graphml.xml -- Vertices 102 -- Aristas 646\n",
+      "Calcular 'global_efficiency'\n",
+      "Calcular 'local_efficiencies'\n",
+      "Calcular 'entropy\n",
+      "Calcular 'fractal_dimension'\n",
+      "Calcular 'hurst'\n",
+      "Calcular 'closeness'\n",
+      "Calcular 'betweenness'\n",
+      "Calcular 'eigenvector'\n",
+      "Calcular 'convergence'\n",
+      "Tiempo: 0.016851277000000664 segundos\n",
+      "\n",
+      "5. ./quijote/grafos/fiducial_LR/105/fiducial_LR_001.graphml.xml -- Vertices 102 -- Aristas 625\n",
+      "Calcular 'global_efficiency'\n",
+      "Calcular 'local_efficiencies'\n",
+      "Calcular 'entropy\n",
+      "Calcular 'fractal_dimension'\n",
+      "Calcular 'hurst'\n",
+      "Calcular 'closeness'\n",
+      "Calcular 'betweenness'\n",
+      "Calcular 'eigenvector'\n",
+      "Calcular 'convergence'\n",
+      "Tiempo: 0.014889130999961253 segundos\n",
+      "\n",
+      "6. ./quijote/grafos/fiducial_LR/106/fiducial_LR_001.graphml.xml -- Vertices 112 -- Aristas 726\n",
+      "Calcular 'global_efficiency'\n",
+      "Calcular 'local_efficiencies'\n",
+      "Calcular 'entropy\n",
+      "Calcular 'fractal_dimension'\n",
+      "Calcular 'hurst'\n",
+      "Calcular 'closeness'\n",
+      "Calcular 'betweenness'\n",
+      "Calcular 'eigenvector'\n",
+      "Calcular 'convergence'\n",
+      "Tiempo: 0.010710316999961833 segundos\n",
+      "\n",
+      "7. ./quijote/grafos/fiducial_LR/1/fiducial_LR_001.graphml.xml -- Vertices 107 -- Aristas 661\n",
+      "Calcular 'global_efficiency'\n",
+      "Calcular 'local_efficiencies'\n",
+      "Calcular 'entropy\n",
+      "Calcular 'fractal_dimension'\n",
+      "Calcular 'hurst'\n",
+      "Calcular 'closeness'\n",
+      "Calcular 'betweenness'\n",
+      "Calcular 'eigenvector'\n",
+      "Calcular 'convergence'\n"
+     ]
+    }
+   ],
    "source": [
     "save = True\n",
     "cont = 1\n",
     "snapnum = \"001\"  # @param\n",
     "\n",
     "# Estas iteraciones son únicamente válidas cuando el snapnum va de 0 hasta 4\n",
-    "if os.path.exists(f'{graphs_root}/metrics.json'):\n",
-    "    with open(f'{graphs_root}/metrics.json', 'r') as json_data:\n",
+    "if os.path.exists(metrics_path):\n",
+    "    with open(metrics_path, 'r') as json_data:\n",
     "        metrics = json.load(json_data)\n",
     "else:\n",
     "    metrics = {}\n",
     "\n",
+    "# Jugar con estas simulaciones para calcular las métricas\n",
+    "new_simus = [\n",
+    "    \"fiducial_LR\", \"fiducial_ZA\", \"w_m\", \"w_p\", \"randoms\",  # Ya están hechas para el snapnum 000\n",
+    "    \"Mnu_p\", \"Mnu_pp\", \"Mnu_ppp\", \"s8_m\", \"s8_p\",  # Ya están hechas para el snapnum 000\n",
+    "    # \"fiducial_HR\"  # No se ha hecho para el snapnum 000 y menos para 001, son grafos muy grandes, demasiados\n",
+    "]\n",
+    "\n",
     "try:\n",
     "    # Iterar sobre cada simulación con grafos creados\n",
-    "    for simu in os.listdir(graphs_root):\n",
+    "    for simu in new_simus:  # os.listdir(graphs_root)\n",
     "        tmp_path = f'{graphs_root}/{simu}'\n",
     "        if not os.path.isdir(tmp_path):\n",
     "            continue\n",
@@ -240,28 +362,21 @@
     "        if simu not in metrics:\n",
     "            metrics[simu] = {}\n",
     "\n",
+    "        print(simu)\n",
+    "\n",
     "        # Se podria crear una función para evitar duplicar código\n",
     "        if simu == \"randoms\":\n",
-    "            # Si no hay un grafo para el snapnum asignado, saltarlo\n",
-    "            graph_path = f'{snapdir}/{simu}_{snapnum}.graphml'\n",
-    "            if not os.path.exists(graph_path):\n",
-    "                continue\n",
+    "            if snapnum not in metrics[simu]:\n",
+    "                metrics[simu][snapnum] = {}\n",
     "\n",
-    "            if snapnum not in metrics[simu][i]:\n",
-    "                metrics[simu][i][snapnum] = {}\n",
-    "\n",
-    "            # Calcular las métricas del grafo\n",
-    "            laplacian_path = f'{snapdir}/laplacian_{simu}_{snapnum}.npz'\n",
-    "            g = ig.Graph.Read_GraphML(graph_path)\n",
-    "            print(f'{cont}. {graph_path} -- Vertices {len(g.vs):,} -- Aristas {len(g.es):,}')\n",
-    "\n",
-    "            t0 = time.perf_counter()\n",
-    "            calculate_metrics(g, metrics[simu][i][snapnum], laplacian_path)\n",
-    "            tf = time.perf_counter() - t0\n",
-    "\n",
-    "            print(f'Tiempo: {tf} segundos\\n')\n",
-    "\n",
+    "            save_metrics(\n",
+    "                metrics[simu][snapnum],\n",
+    "                f'{tmp_path}/random_{snapnum}.graphml.xml',\n",
+    "                f'{tmp_path}/laplacian_{snapnum}.npz',\n",
+    "                cont\n",
+    "            )\n",
     "            cont += 1\n",
+    "            continue\n",
     "\n",
     "        # Iterar sobre las realizaciones\n",
     "        for i in os.listdir(tmp_path):\n",
@@ -270,7 +385,7 @@
     "                metrics[simu][i] = {}\n",
     "\n",
     "            # Si no hay un grafo para el snapnum asignado, saltarlo\n",
-    "            graph_path = f'{snapdir}/{simu}_{snapnum}.graphml'\n",
+    "            graph_path = f'{snapdir}/{simu}_{snapnum}.graphml.xml'\n",
     "            if not os.path.exists(graph_path):\n",
     "                continue\n",
     "\n",
@@ -278,28 +393,46 @@
     "                metrics[simu][i][snapnum] = {}\n",
     "\n",
     "            # Calcular las métricas del grafo\n",
-    "            laplacian_path = f'{snapdir}/laplacian_{simu}_{snapnum}.npz'\n",
-    "            g = ig.Graph.Read_GraphML(graph_path)\n",
-    "            print(f'{cont}. {graph_path} -- Vertices {len(g.vs):,} -- Aristas {len(g.es):,}')\n",
-    "\n",
-    "            t0 = time.perf_counter()\n",
-    "            calculate_metrics(g, metrics[simu][i][snapnum], laplacian_path)\n",
-    "            tf = time.perf_counter() - t0\n",
-    "\n",
-    "            print(f'Tiempo: {tf} segundos\\n')\n",
-    "\n",
+    "            save_metrics(\n",
+    "                metrics[simu][i][snapnum],\n",
+    "                graph_path,\n",
+    "                f'{snapdir}/laplacian_{simu}_{snapnum}.npz',\n",
+    "                cont\n",
+    "            )\n",
     "            cont += 1\n",
     "\n",
     "        print()\n",
     "except KeyboardInterrupt:\n",
     "    save = False\n",
     "except Exception as e:\n",
-    "    pass\n",
+    "    print(repr(e))\n",
     "\n",
     "if save:\n",
     "    print('Guardando métricas...')\n",
-    "    with open(f'{graphs_root}/metrics.json', 'w') as json_data:\n",
+    "    with open(metrics_path, 'w') as json_data:\n",
     "        json.dump(metrics, json_data, indent=4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Concatenar metricas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"./quijote/grafos/metrics1.json\", 'r') as json_data1, \\\n",
+    "     open(\"./quijote/grafos/metrics2.json\", 'r') as json_data2, \\\n",
+    "     open(\"./quijote/grafos/metrics.json\", 'w') as json_data:\n",
+    "    metrics1 = json.load(json_data1)\n",
+    "    metrics2 = json.load(json_data2)\n",
+    "    metrics = {**metrics1, **metrics2}\n",
+    "    json.dump(metrics, json_data, indent=4)"
    ]
   },
   {
@@ -832,7 +965,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.13.0"
   }
  },
  "nbformat": 4,
